--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="restart">
                 <button onclick="
                     document.querySelector('.restart a').click()">New Game</button>
-                <a href="#"></a>
+                <a href=""></a>
             </div>
         </div>
         <div class="scorecard">
