--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 verify();'>✌&nbsp;</button>
             </div>
             <div class="restart">
-                <button onclick="
-                    document.querySelector('.restart a').click()">New Game</button>
+                <button onclick="reload">New Game</button>
                 <a href=""></a>
             </div>
         </div>
