--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                 verify();'>✌&nbsp;</button>
             </div>
             <div class="restart">
-                <button onclick="reload">New Game</button>
-                <a href=""></a>
+                <button onclick="
+                    document.queryselector('.restart a').click()">New Game</button>
+                <a href="https://architgoel229.github.io/Rock-Paper-Scissors/"></a>
             </div>
         </div>
         <div class="scorecard">
