--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                 verify();'>✌&nbsp;</button>
             </div>
             <div class="restart">
+                <a href="https://architgoel229.github.io/Rock-Paper-Scissors/">
                 <button onclick="
                     document.queryselector('.restart a').click()">New Game</button>
-                <a href="https://architgoel229.github.io/Rock-Paper-Scissors/"></a>
+                </a>
             </div>
         </div>
         <div class="scorecard">
