--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             </div>
             <div class="restart">
                 <a href="https://architgoel229.github.io/Rock-Paper-Scissors/">
-                <button onclick="
-                    document.queryselector('.restart a').click()">New Game</button>
+                <button>New Game</button>
                 </a>
             </div>
         </div>
